[gd_scene load_steps=6 format=3 uid="uid://d3ya3s5q3ul74"]

[ext_resource type="Script" path="res://main.gd" id="1_dlg5d"]
[ext_resource type="PackedScene" uid="uid://do5d2tewx0p4n" path="res://collider.tscn" id="2_08mqq"]
[ext_resource type="PackedScene" uid="uid://d0jclen0mdg0f" path="res://player.tscn" id="3_4vc7s"]
[ext_resource type="PackedScene" uid="uid://d1i4npkefihl1" path="res://hud.tscn" id="4_als5w"]

[sub_resource type="Curve2D" id="Curve2D_lanf2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_dlg5d")
collider_scene = ExtResource("2_08mqq")

[node name="ColliderTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="ColliderPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lanf2")

[node name="ColliderSpawnPath" type="PathFollow2D" parent="ColliderPath"]
position = Vector2(0, 2)
rotation = -1.5708

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="Player" parent="." instance=ExtResource("3_4vc7s")]

[node name="HUD" parent="." instance=ExtResource("4_als5w")]

[connection signal="timeout" from="ColliderTimer" to="." method="_on_collider_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="collision" from="Player" to="." method="_on_player_collision"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
